# miraculix

./: README.md
pkg/: DESCRIPTION  NAMESPACE  configure  configure.ac  configure.win
pkg/R/: S3.R  aaa_auto.R  auxiliary.R  haplogeno.R  rhaplo.R  scan.R
pkg/inst/: CITATION
pkg/man/: MoBPS.Rd  RFoptions.Rd  as.genomic.Rd  geno.Rd  genomicmatrix-class.Rd  haplomatrix.class.Rd  miraculix.Rd  relMatrix.Rd  rhaplo.Rd  scanning.Rd  vectorGeno.Rd
pkg/man/macros/: defn.Rd
pkg/src/: 2bit.cc  3bit.cc  AutoMiraculix.cc  AutoMiraculix.h  Bit23.intern.h  Haplo.cc  IntrinsicsBase.h  MX.cc  MX.h  Makevars  Makevars.in  MoBPS.cc  Scalar.cc  Scalar.h  Vector.matrix.cc  hamming.cc  hamming.intern.h  hamming2.cc  hamming3.cc  haplogeno.cc  haplogeno.h  intrinsics.h  miraculix.h  multiply.cc  multiply256.cc  multiplyIntern.h  nocoding.cc  options.cc  options.h  packed128.cc  packed256.cc  packedDef.h  packedIntern.h  shuffle128.cc  shuffle256.cc  shuffleIntern.h  zzz.c
